objects/PT_PriceList_Entry__c.object
<CustomObject>
    <fields>
        <fullName>L2I_External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>price list entry id from oracle</inlineHelpText>
        <label>L2I_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>L2I_IntegrationMessage</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>L2I_IntegrationStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Line_ExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>price list entry id from oracle</inlineHelpText>
        <label>L2I_Line_ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_CanEscalate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CanEscalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Price__c</fullName>
        <inlineHelpText>Used to create what if pricing for related quotes</inlineHelpText>
        <label>Pending Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PT_Price_List_Name__c</fullName>
        <formula>PT_Program_Price_List__r.PT_Price_List_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price List Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_ProductCode__c</fullName>
        <formula>PT_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Program Price List Entries</relationshipLabel>
        <relationshipName>Program_Price_List_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Program_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Price List</label>
        <referenceTo>PT_PriceList__c</referenceTo>
        <relationshipLabel>Program Price List Entries</relationshipLabel>
        <relationshipName>Program_Price_List_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Reconcile</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PT_isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Price List Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Price List Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>